--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Aug 24 2020 10:18:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Aug 25 2020 09:00:34 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -309,7 +309,7 @@
 </svg></div>
               </div>
               <div class="filters__header_name">
-                <div>indicator name</div>
+                <div class="truncate">indicator name</div>
               </div>
             </div>
             <div data-w-id="a0a0a80b-723d-9f06-08f8-22ecf4a4bddb" class="filters__header_toggle">
@@ -482,17 +482,6 @@
             <div>A <span class="location-type">Location type</span> in <span class="parent-geography">parent geography</span></div>
           </div>
           <div class="location__facilities">
-            <div class="location__facilities_title">
-              <div>Facilities in this Location</div>
-            </div>
-            <div class="location__facilities_loading">
-              <div class="loading">
-                <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
-                <div class="loading__text">
-                  <div>Loading... </div>
-                </div>
-              </div>
-            </div>
             <div class="location__facilities_no-data hidden">
               <div class="no-data">
                 <div class="no-data__icon">
@@ -505,22 +494,54 @@
                 </div>
               </div>
             </div>
-            <div class="location__facilities_sources">
-              <div class="label">
-                <div>Sources:</div>
-              </div>
-              <div class="location__sources_loading">
-                <div class="loading">
-                  <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
-                  <div class="loading__text">
-                    <div>Loading... </div>
-                  </div>
+            <div class="location__facilities_loading">
+              <div class="loading">
+                <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+                <div class="loading__text">
+                  <div>Loading... </div>
                 </div>
               </div>
-              <div class="location__sources_no-data hidden">
-                <div class="no-data">
-                  <div class="no-data__text">
-                    <div>No source data available</div>
+            </div>
+            <div class="location__facilities_header hidden">
+              <div class="location__facilities_icon">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path>
+<path fill="currentColor" d="M8.92,11.22a2.56,2.56,0,1,1,2.55-2.55,2.55,2.55,0,0,1-2.55,2.55m0-9.72A7.16,7.16,0,0,0,1.76,8.67C1.76,14,8.92,22,8.92,22S16.08,14,16.08,8.67A7.17,7.17,0,0,0,8.92,1.5Z"></path>
+<path fill="currentColor" d="M18.77,16.26V12.54h-2v3.72H14.39c-.42.69-.85,1.36-1.28,2h3.67V22h2V18.24h3.72v-2Z"></path>
+</svg></div>
+              </div>
+              <div class="location__facilities_title">
+                <div>This <span class="location__facilities_geo-type">location</span> has <span class="location__facilities_facilities-value"><strong>0000</strong></span><strong> facilities</strong> in <span class="location__facilities_categories-value"><strong>0000</strong></span><strong> categories</strong>.</div>
+              </div>
+            </div>
+            <div class="location__facilities_trigger hidden">
+              <div data-w-id="d2df92af-c619-a615-ada8-5aae86e9c6ad" style="display:flex" class="location__facilities_expand">
+                <div>Show facilities</div>
+              </div>
+              <div data-w-id="d2df92af-c619-a615-ada8-5aae86e9c6b0" style="display:none" class="location__facilities_contract">
+                <div>Hide facilities</div>
+              </div>
+            </div>
+            <div style="height:0PX" class="location__facilities_content">
+              <div class="location__facilities_content-wrapper">
+                <div class="location__facilities_sources">
+                  <div class="label">
+                    <div>Sources:</div>
+                  </div>
+                  <div class="location__sources_loading">
+                    <div class="loading">
+                      <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+                      <div class="loading__text">
+                        <div>Loading... </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="location__sources_no-data hidden">
+                    <div class="no-data">
+                      <div class="no-data__text">
+                        <div>No source data available</div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -1881,53 +1902,125 @@
           <div>Location facilities</div>
         </div>
         <div class="styles__area_block wide">
-          <div class="location-facility">
-            <div class="location-facility__card">
-              <div class="location-facility__category">
-                <div class="location-facility__header">
-                  <div class="location-facility__icon">
-                    <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+          <div class="location__facilities">
+            <div class="location__facilities_header--loading">
+              <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+              <div class="location__facilities_title_loading">
+                <div>Loading facilities...</div>
+              </div>
+            </div>
+            <div class="location__facilities_header hidden">
+              <div class="location__facilities_icon">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path>
+<path fill="currentColor" d="M8.92,11.22a2.56,2.56,0,1,1,2.55-2.55,2.55,2.55,0,0,1-2.55,2.55m0-9.72A7.16,7.16,0,0,0,1.76,8.67C1.76,14,8.92,22,8.92,22S16.08,14,16.08,8.67A7.17,7.17,0,0,0,8.92,1.5Z"></path>
+<path fill="currentColor" d="M18.77,16.26V12.54h-2v3.72H14.39c-.42.69-.85,1.36-1.28,2h3.67V22h2V18.24h3.72v-2Z"></path>
+</svg></div>
+              </div>
+              <div class="location__facilities_title">
+                <div>This <span class="location__facilities_geo-type">location</span> has <span class="location__facilities_facilities-value"><strong>0000</strong></span><strong> facilities</strong> in <span class="location__facilities_categories-value"><strong>0000</strong></span><strong> categories</strong>.</div>
+              </div>
+            </div>
+            <div class="location__facilities_trigger hidden">
+              <div data-w-id="4213bb89-7d31-f409-202f-ae0837f612d4" style="display:flex" class="location__facilities_expand">
+                <div>Show facilities</div>
+              </div>
+              <div data-w-id="4213bb89-7d31-f409-202f-ae0837f612d7" style="display:none" class="location__facilities_contract">
+                <div>Hide facilities</div>
+              </div>
+            </div>
+            <div style="height:0PX" class="location__facilities_content">
+              <div class="location__facilities_content-wrapper">
+                <div class="location__facilities_loading hidden">
+                  <div class="loading">
+                    <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+                    <div class="loading__text">
+                      <div>Loading... </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="location__facilities_no-data hidden">
+                  <div class="no-data">
+                    <div class="no-data__icon">
+                      <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+<path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"></path>
+</svg></div>
+                    </div>
+                    <div class="no-data__text">
+                      <div>No facilities for this location</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="location-facility">
+                  <div class="location-facility__card">
+                    <div class="location-facility__category">
+                      <div class="location-facility__header">
+                        <div class="location-facility__icon">
+                          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
 </svg></div>
-                  </div>
-                  <div class="location-facility__name">
-                    <div>Point data category</div>
-                  </div>
-                </div>
-                <div class="location-facility__value">
-                  <div>0000</div>
-                </div>
-              </div>
-              <div class="location-facility__list">
-                <a href="#" class="location-facility__list_item w-inline-block">
-                  <div class="location-facility__item_name">
-                    <div class="truncate">Point data item</div>
-                  </div>
-                  <div class="location-facility__item_value">
-                    <div>0000</div>
-                  </div>
-                  <div id="w-node-30bc8b667f9c-e148319d" class="location-facility__item_download">
-                    <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                        </div>
+                        <div class="location-facility__name">
+                          <div>Point data category</div>
+                        </div>
+                      </div>
+                      <div class="location-facility__value">
+                        <div>0000</div>
+                      </div>
+                    </div>
+                    <div class="location-facility__list">
+                      <a href="#" class="location-facility__list_item w-inline-block">
+                        <div class="location-facility__item_name">
+                          <div class="truncate">Point data item</div>
+                        </div>
+                        <div class="location-facility__item_value">
+                          <div>0000</div>
+                        </div>
+                        <div id="w-node-a4312e607bde-e148319d" class="location-facility__item_download">
+                          <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
 </svg></div>
-                  </div>
-                </a>
-                <a href="#" class="location-facility__list_item last w-inline-block">
-                  <div class="location-facility__item_name">
-                    <div class="truncate">Point data item</div>
-                  </div>
-                  <div class="location-facility__item_value">
-                    <div>0000</div>
-                  </div>
-                  <div id="w-node-d352b1b0934a-e148319d" class="location-facility__item_download">
-                    <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                        </div>
+                      </a>
+                      <a href="#" class="location-facility__list_item last w-inline-block">
+                        <div class="location-facility__item_name">
+                          <div class="truncate">Point data item</div>
+                        </div>
+                        <div class="location-facility__item_value">
+                          <div>0000</div>
+                        </div>
+                        <div id="w-node-a4312e607be7-e148319d" class="location-facility__item_download">
+                          <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
 <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
 </svg></div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="location-facility__description">
+                      <div>Description text that describes this point data category in relation to surrounding locations</div>
+                    </div>
                   </div>
-                </a>
-              </div>
-              <div class="location-facility__description">
-                <div>Description text that describes this point data category in relation to surrounding locations</div>
+                </div>
+                <div class="location__facilities_sources">
+                  <div class="label">
+                    <div>Sources:</div>
+                  </div>
+                  <div class="location__sources_loading">
+                    <div class="loading">
+                      <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+                      <div class="loading__text">
+                        <div>Loading... </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="location__sources_no-data hidden">
+                    <div class="no-data">
+                      <div class="no-data__text">
+                        <div>No source data available</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -2545,76 +2638,62 @@
   <div class="print-styling w-embed">
     <style>
 @media print {
-    /*--padding adjustments--*/
-    .location__description, .location__sources .profile-indicator {
-        padding-bottom: 0px;
-    }
-
-    .section {
-        padding-bottom: 20px;
-    }
-
-    .sub-category-header__key-metrics {
-        padding-bottom: 12px;
-    }
-
-    .profile-indicator__header {
-        margin-bottom: 0px;
-    }
-
-    .sub-category-header__title {
-        margin-bottom: 12px;
-    }
-
-    .profile-indicator__chart {
-        margin-top: 0px;
-    }
-
-    /*--hide unwanted elements in print--*/
-    .nav, .login-modal, .category-header__link, .location__header, .profile-indicator__options, .sticky-header, .tutorial-modal, .styles, .map, .point-mapper, .data-mapper, .panel-toggles, .rich-data-nav, .rich-data-bumper, .rich-data-toggles {
-        display: none;
-    }
-
-    /*--avoid page breaks--*/
-    .sub-category-header {
-        break-inside: avoid;
-    }
-
-    .profile-indicator {
-        break-inside: avoid;
-    }
-
-    /*--hide interaction buttons--*/
-    .location-facility__list_item {
-        grid-template-columns: 4fr 1fr .0;
-    }
-
-    .location-facility__item_download {
-        display: none;
-    }
-
-    /*--adjust rich-data panel to fill page--*/
-    .rich-data, .rich-data-content {
-        max-width: 100%;
-        width: 100%;
-    }
-
-    .rich-data-content {
-        padding: 0px;
-        filter: grayscale(100%);
-    }
-
-    /*--adjust text size--*/
-    .body {
-        font-size: 12px !important;
-    }
-
-    /*--adjust charts--*/
-    .bar-chart__row_bar {
-        background-color: #000 !important;
-    }
+/*--padding adjustments--*/
+	.location__description, .location__sources .profile-indicator {
+  	padding-bottom: 0px;
+  }
+  .section {
+  	padding-bottom: 20px;
+  }
+  .sub-category-header__key-metrics {
+  	padding-bottom: 12px;
+  }
+  .profile-indicator__header {
+  	margin-bottom: 0px;
+  }
+	.sub-category-header__title {
+  	margin-bottom: 12px;
+  }
+  .profile-indicator__chart {
+  	margin-top: 0px;
+  }
+/*--hide unwanted elements in print--*/
+  .nav, .login-modal, .category-header__link, .location__header, .profile-indicator__options, .sticky-header, .tutorial-modal, .styles, .map, .point-mapper, .data-mapper, .panel-toggles, .rich-data-nav, .rich-data-bumper, .rich-data-toggles {
+    display: none;
+  }
+/*--avoid page breaks--*/
+	.sub-category-header {
+ 		break-inside: avoid;
+	}
+	.profile-indicator {
+  	break-inside: avoid;
+  }
+/*--hide interaction buttons--*/
+.location-facility__list_item {
+	grid-template-columns: 4fr 1fr .0;
+  }
+.location-facility__item_download {
+	display: none;
+  }
+/*--adjust rich-data panel to fill page--*/
+	.rich-data, .rich-data-content {
+  	max-width: 100%;
+    width: 100%;
+	}
+  .rich-data-content {
+  	padding: 0px;
+    filter: grayscale(100%);
+  }
+/*--adjust text size--*/
+  .body {
+ 	 font-size: 12px !important;
+  }
+/*--adjust charts--*/
+.bar-chart__row_bar {
+	background-color: #000 !important;
+  }
 }
-    </style>
+</style>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ecb7ed6bb713f2f4b48319b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
