--- a/src/about.html
+++ b/src/about.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Oct 28 2020 09:21:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
+<!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Thu Oct 01 2020 07:27:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecf610e0e918eeee29e9d23" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -19,67 +20,64 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-93649482-25"></script>
   <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        const analyticsId = 'UA-93649482-25';
-        gtag('js', new Date());
-        gtag('config', analyticsId, { 'send_page_view': false });
-        gtag('config', analyticsId, {
-            'custom_map': {'dimension1': 'profile'}
-        });
-        window.gtag = gtag;
-    </script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    const analyticsId = 'UA-93649482-25';
+    gtag('js', new Date());
+    gtag('config', analyticsId, { 'send_page_view': false });
+    gtag('config', analyticsId, {
+      'custom_map': {'dimension1': 'profile'}
+    });
+    window.gtag = gtag;
+  </script>
   <script src="https://kit.fontawesome.com/95e41092af.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="nav narrow">
-    <div data-w-id="f25982b9-693e-74dc-9a2f-7590f031f5bd" style="opacity:1;display:none" class="nav__search-deselect"></div>
-    <div class="nav__shadow"></div>
-    <div class="nav__content narrow">
-      <a id="w-node-7590f031f5c0-e29e9d23" href="#" class="nav__content_title w-inline-block">
-        <div class="nav__profile-logo"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" class="profile-logo"></div>
-      </a>
-      <div id="w-node-7590f031f5c3-e29e9d23" class="nav__content_search hidden">
-        <div class="nav__search_input">
-          <div data-w-id="f25982b9-693e-74dc-9a2f-7590f031f5c5" class="search__input w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><input type="text" class="location__search_input w-input" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Search for a location..." id="Location">
-              <div class="location__search_loading hidden"><img src="images/loading.gif" alt=""></div>
-            </form>
-            <div class="w-form-done">
-              <div>Thank you! Your submission has been received!</div>
-            </div>
-            <div class="w-form-fail">
-              <div>Oops! Something went wrong while submitting the form.</div>
-            </div>
+<div class="nav narrow">
+  <div data-w-id="f25982b9-693e-74dc-9a2f-7590f031f5bd" style="opacity:1;display:none" class="nav__search-deselect"></div>
+  <div class="nav__shadow"></div>
+  <div class="nav__content narrow">
+    <a id="w-node-7590f031f5c0-e29e9d23" href="#" class="nav__content_title w-inline-block">
+      <div class="nav__profile-logo"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" class="profile-logo"></div>
+    </a>
+    <div id="w-node-7590f031f5c3-e29e9d23" class="nav__content_search hidden">
+      <div class="nav__search_input">
+        <div data-w-id="f25982b9-693e-74dc-9a2f-7590f031f5c5" class="search__input w-form">
+          <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><input type="text" class="location__search_input w-input" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Search for a location..." id="Location">
+            <div class="location__search_loading hidden"><img src="images/loading.gif" alt=""></div>
+          </form>
+          <div class="w-form-done">
+            <div>Thank you! Your submission has been received!</div>
           </div>
-          <div class="nav__search_button">
-            <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                <path d="M0 0h24v24H0z" fill="none"></path>
-                <path fill="currentColor" d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-              </svg></div>
+          <div class="w-form-fail">
+            <div>Oops! Something went wrong while submitting the form.</div>
           </div>
         </div>
-        <div style="display:none;opacity:0" class="nav__search_dropdown">
-          <div class="search__dropdown_plate">
-            <div class="search__dropdown_scroll narrow-scroll">
-              <div class="search__dropdown_content">
-                <div class="search__dropdown_results-label">
-                  <div>Results (<span class="search__dropdown_results-value">0</span>):</div>
-                </div>
-                <div class="search__dropdown_list">
-                  <div class="search__dropdown_no-data">
-                    <div class="no-data">
-                      <div class="no-data__icon">
-                        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                            <path d="M0 0h24v24H0z" fill="none"></path>
-                            <path fill="currentColor" d="M20 5H4c-1.1 0-1.99.9-1.99 2L2 17c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm-9 3h2v2h-2V8zm0 3h2v2h-2v-2zM8 8h2v2H8V8zm0 3h2v2H8v-2zm-1 2H5v-2h2v2zm0-3H5V8h2v2zm9 7H8v-2h8v2zm0-4h-2v-2h2v2zm0-3h-2V8h2v2zm3 3h-2v-2h2v2zm0-3h-2V8h2v2z"></path>
-                          </svg></div>
-                      </div>
-                      <div class="no-data__text">
-                        <div>Start typing to begin...</div>
-                      </div>
+        <div class="nav__search_button">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+            <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+          </svg></div>
+        </div>
+      </div>
+      <div style="display:none;opacity:0" class="nav__search_dropdown">
+        <div class="search__dropdown_plate">
+          <div class="search__dropdown_scroll narrow-scroll">
+            <div class="search__dropdown_content">
+              <div class="search__dropdown_results-label">
+                <div>Results (<span class="search__dropdown_results-value">0</span>):</div>
+              </div>
+              <div class="search__dropdown_list">
+                <div class="search__dropdown_no-data">
+                  <div class="no-data">
+                    <div class="no-data__icon">
+                      <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                        <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M20 5H4c-1.1 0-1.99.9-1.99 2L2 17c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm-9 3h2v2h-2V8zm0 3h2v2h-2v-2zM8 8h2v2H8V8zm0 3h2v2H8v-2zm-1 2H5v-2h2v2zm0-3H5V8h2v2zm9 7H8v-2h8v2zm0-4h-2v-2h2v2zm0-3h-2V8h2v2zm3 3h-2v-2h2v2zm0-3h-2V8h2v2z"></path>
+                      </svg></div>
+                    </div>
+                    <div class="no-data__text">
+                      <div>Start typing to begin...</div>
                     </div>
                   </div>
                 </div>
@@ -88,91 +86,86 @@
           </div>
         </div>
       </div>
-      <div id="w-node-7590f031f5e4-e29e9d23" class="nav__content_menu">
-        <div class="nav__menu-trigger hidden">
-          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-              <path fill="currentColor" d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
-            </svg></div>
+    </div>
+    <div id="w-node-7590f031f5e4-e29e9d23" class="nav__content_menu">
+      <div class="nav__menu-trigger hidden">
+        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+          <path fill="currentColor" d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+        </svg></div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="content">
+  <div class="content-block bg-green first">
+    <div class="container">
+      <div class="page-header">
+        <div id="w-node-3e7554d9fdf7-e29e9d23" class="page-header__title">
+          <div class="page-header__overline">
+            <div>About us</div>
+          </div>
+          <div class="page-header__profile-owner">
+            <h1 class="clear">Youth Explorer</h1>
+          </div>
+          <a href="#" class="page-header__website-link hidden w-inline-block">
+            <div class="page-header__website-link_text">
+              <div>Visit our website</div>
+            </div>
+            <div class="page-header__website-link_icon">
+              <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewbox="0 0 24 24" width="24">
+                <path d="M0 0h24v24H0z" fill="none"></path><path fill="currentColor" d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path>
+              </svg></div>
+            </div>
+          </a>
+        </div><a id="w-node-bcacce32cf46-e29e9d23" href="#" class="button w-button">View our map</a></div>
+    </div>
+  </div>
+  <div class="content-block">
+    <div class="container">
+      <div class="about-rich-text w-richtext">
+        <h2>Heading 2</h2>
+        <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
+        <h3>Heading 3</h3>
+        <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
+        <h4>Static and dynamic content editing</h4>
+        <p>A rich text element can be used with static or dynamic content. For static content, just drop it into any page and begin editing. For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Voila!</p>
+        <h4>How to customize formatting for each rich text</h4>
+        <p>Headings, paragraphs, blockquotes, figures, images, and figure captions can all be styled after a class is added to the rich text element using the &quot;When inside of&quot; nested selector system.</p>
+      </div>
+    </div>
+  </div>
+  <div class="content-block footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-logo"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" class="profile-logo"></div>
+        <div class="footer-links">
+          <div class="footer-links__header">
+            <div>Resources</div>
+          </div>
+          <a href="#" class="footer-link w-inline-block">
+            <div>Code Repository</div>
+          </a>
+          <a href="#" class="footer-link w-inline-block">
+            <div>User manual</div>
+          </a>
+        </div>
+        <div class="footer-links">
+          <div class="footer-links__header">
+            <div>Get in touch</div>
+          </div>
+          <a href="#" class="footer-link w-inline-block">
+            <div>loremipsum@email.com</div>
+          </a>
+        </div>
+        <div id="w-node-d2e40839bd81-e29e9d23" class="footer__disclaimer">
+          <div id="w-node-4f0e27157bd9-e29e9d23"><span class="footer__profile-name">Wazi-NG (this is a temporary name) is an opensource project based on the excellent </span><a href="https://censusreporter.org/" target="_blank"><span class="footer__profile-name">Census Reporter</span></a><span class="footer__profile-name"> and </span><a href="http://www.wazimap.co.za" target="_blank"><span class="footer__profile-name">Wazimap</span></a><span class="footer__profile-name">.</span></div>
         </div>
       </div>
     </div>
   </div>
-  <div class="content">
-    <div class="content-block bg-green first">
-      <div class="container">
-        <div class="page-header">
-          <div id="w-node-3e7554d9fdf7-e29e9d23" class="page-header__title">
-            <div class="page-header__overline">
-              <div>About us</div>
-            </div>
-            <div class="page-header__profile-owner">
-              <h1 class="clear">Youth Explorer</h1>
-            </div>
-            <a href="#" class="page-header__website-link hidden w-inline-block">
-              <div class="page-header__website-link_text">
-                <div>Visit our website</div>
-              </div>
-              <div class="page-header__website-link_icon">
-                <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewbox="0 0 24 24" width="24">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path fill="currentColor" d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"></path>
-                  </svg></div>
-              </div>
-            </a>
-          </div>
-          <a id="w-node-bcacce32cf46-e29e9d23" href="#" class="button w-button">View our map</a>
-        </div>
-      </div>
-    </div>
-    <div class="content-block">
-      <div class="container">
-        <div class="about-rich-text w-richtext">
-          <h2>Heading 2</h2>
-          <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
-          <h3>Heading 3</h3>
-          <p>The rich text element allows you to create and format headings, paragraphs, blockquotes, images, and video all in one place instead of having to add and format them individually. Just double-click and easily create content.</p>
-          <h4>Static and dynamic content editing</h4>
-          <p>A rich text element can be used with static or dynamic content. For static content, just drop it into any page and begin editing. For dynamic content, add a rich text field to any collection and then connect a rich text element to that field in the settings panel. Voila!</p>
-          <h4>How to customize formatting for each rich text</h4>
-          <p>Headings, paragraphs, blockquotes, figures, images, and figure captions can all be styled after a class is added to the rich text element using the &quot;When inside of&quot; nested selector system.</p>
-        </div>
-      </div>
-    </div>
-    <div class="content-block footer">
-      <div class="container">
-        <div class="footer-grid">
-          <div class="footer-logo"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" alt="" class="profile-logo"></div>
-          <div class="footer-links">
-            <div class="footer-links__header">
-              <div>Resources</div>
-            </div>
-            <a href="#" class="footer-link w-inline-block">
-              <div>Code Repository</div>
-            </a>
-            <a href="#" class="footer-link w-inline-block">
-              <div>User manual</div>
-            </a>
-          </div>
-          <div class="footer-links">
-            <div class="footer-links__header">
-              <div>Get in touch</div>
-            </div>
-            <a href="#" class="footer-link w-inline-block">
-              <div>loremipsum@email.com</div>
-            </a>
-          </div>
-          <div id="w-node-d2e40839bd81-e29e9d23" class="footer__disclaimer">
-            <div id="w-node-4f0e27157bd9-e29e9d23"><span class="footer__profile-name">Wazi-NG (this is a temporary name) is an opensource project based on the excellent </span>
-              <a href="https://censusreporter.org/" target="_blank"><span class="footer__profile-name">Census Reporter</span></a><span class="footer__profile-name"> and </span>
-              <a href="http://www.wazimap.co.za" target="_blank"><span class="footer__profile-name">Wazimap</span></a><span class="footer__profile-name">.</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ecb7ed6bb713f2f4b48319b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+</div>
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ecb7ed6bb713f2f4b48319b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="js/webflow.js" type="text/javascript"></script>
+<!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
